--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,8 +43,14 @@ jobs:
 
     - name: Package
       run: dotnet pack --configuration Release --include-symbols --version-suffix pre-${GITHUB_RUN_NUMBER}
+
+    - name: Upload package artifact
+      uses: actions/upload-artifact@v1
+      with:
+        name: package
+        path: src/GovUk.Frontend.AspNetCore/bin/Release/*.nupkg 
     
-    - name: Publish package
+    - name: Publish package to nuget.org
       if: github.ref == 'refs/heads/release'
       run: dotnet nuget push src/GovUk.Frontend.AspNetCore/bin/Release/*.nupkg --api-key ${NUGET_TOKEN} --source https://api.nuget.org/v3/index.json
       env:
