Don't add a version suffix for tagged commits

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,8 +41,15 @@ jobs:
     - name: Test
       run: dotnet test --configuration Release
 
+    - name: Get package version suffix
+      id: get_package_version_suffix
+      run: echo ::set-output name=SUFFIX::$([[ $GITHUB_REF =~ "refs/tags/" ]] && echo "" || echo "pre-${GITHUB_RUN_NUMBER}")
+
     - name: Package
-      run: dotnet pack --configuration Release --include-symbols --version-suffix pre-${GITHUB_RUN_NUMBER}
+      run: |
+        VERSION_SUFFIX=${{ steps.get_package_version_suffix.outputs.SUFFIX }}
+        dotnet pack --configuration Release --include-symbols \
+          ${VERSION_SUFFIX:+ --version-suffix $VERSION_SUFFIX}
 
     - name: Publish package artifact
       uses: actions/upload-artifact@v2-preview
