--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
         path: src/GovUk.Frontend.AspNetCore/bin/Release/*.nupkg
     
     - name: Publish package to NuGet
-      if: github.ref == 'refs/heads/release'
+      if: startsWith(github.ref, 'refs/tags/v')
       run: dotnet nuget push src/GovUk.Frontend.AspNetCore/bin/Release/*.nupkg --api-key ${NUGET_TOKEN} --source https://api.nuget.org/v3/index.json
       env:
           NUGET_TOKEN: ${{ secrets.NUGET_TOKEN }} 
