--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,18 @@ on:
     - release
     tags:
     - v*
+    paths-ignore:
+    - docs/**
+    - LICENSE
+    - '**.md'
   pull_request:
     branches:
     - master
+    - release
+    paths-ignore:
+    - docs/**
+    - LICENSE
+    - '**.md'
 
 jobs:
   build:
