Move ConformanceTests into their own project
The hack required for disabling certain validation features on
conformance tests shouldn't be present in Release bits. A static Config
class now contains the RunningConformanceTests flag and this is not
compiled for Release builds unless a EnableTestSwitches option
is passed to the build.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,10 +44,10 @@ jobs:
       run: dotnet build --configuration Release --no-restore
 
     - name: Test
-      run: dotnet test --configuration Release --no-build --filter Category!=ConformanceTests
+      run: dotnet test test/GovUk.FrontEnd.AspNetCore.Tests --configuration Release --no-build
 
     - name: Conformance tests
-      run: dotnet test --configuration Release --no-build --filter Category=ConformanceTests
+      run: dotnet test test/GovUk.FrontEnd.AspNetCore.ConformanceTests --configuration Release /p:EnableTestSwitches=true
       continue-on-error: true
 
     - name: Package
