Workaround periodic CI failures

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,11 @@ jobs:
         fetch-depth: 0
         submodules: recursive
 
+    - name: Clean
+      run: |
+        dotnet clean --configuration Release
+        dotnet nuget locals all --clear
+
     - name: Restore
       run: dotnet restore
 
