Use excludeDiff filter in Accordion for dealing with invalid fixtures
Also remove the global 'Config' class and the conformance test-specific
behaviors in the main project.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
       run: dotnet test test/GovUk.FrontEnd.AspNetCore.Tests --configuration Release --no-build
 
     - name: Conformance tests
-      run: dotnet test test/GovUk.FrontEnd.AspNetCore.ConformanceTests --configuration Release /p:EnableTestSwitches=true
+      run: dotnet test test/GovUk.FrontEnd.AspNetCore.ConformanceTests --configuration Release
 
     - name: Package
       run: dotnet pack src/GovUk.Frontend.AspNetCore/ --configuration Release --no-build
