Run conformance tests in same step as other tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,10 +49,9 @@ jobs:
       run: dotnet build --configuration Release --no-restore
 
     - name: Test
-      run: dotnet test test/GovUk.FrontEnd.AspNetCore.Tests --configuration Release --no-build
-
-    - name: Conformance tests
-      run: dotnet test test/GovUk.FrontEnd.AspNetCore.ConformanceTests --configuration Release
+      run: |
+        dotnet test test/GovUk.FrontEnd.AspNetCore.Tests --configuration Release --no-build
+        dotnet test test/GovUk.FrontEnd.AspNetCore.ConformanceTests --configuration Release --no-build
 
     - name: Package
       run: dotnet pack src/GovUk.Frontend.AspNetCore/ --configuration Release --no-build
