--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: ci
 on:
   push:
     branches:
-    - master
+    - main
     - release
     tags:
     - v*
@@ -13,7 +13,7 @@ on:
     - '**.md'
   pull_request:
     branches:
-    - master
+    - main
     - release
     paths-ignore:
     - docs/**
