--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,10 +48,14 @@ jobs:
     - name: Build
       run: dotnet build --configuration Release --no-restore
 
+    - name: Install Playwright
+      run: pwsh ./test/GovUk.Frontend.AspNetCore.IntegrationTests/bin/Release/netcoreapp3.1/playwright.ps1 install
+
     - name: Test
       run: |
         dotnet test test/GovUk.Frontend.AspNetCore.Tests/ --configuration Release --no-build
         dotnet test test/GovUk.Frontend.AspNetCore.ConformanceTests/ --configuration Release --no-build
+        dotnet test test/GovUk.Frontend.AspNetCore.IntegrationTests/ --configuration Release --no-build
 
     - name: Package
       run: dotnet pack src/GovUk.Frontend.AspNetCore/ --configuration Release --no-build
