--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,8 @@ name: ci
 on:
   push:
     branches:
+    - dev
     - main
-    - release
     tags:
     - v*
     paths-ignore:
@@ -13,8 +13,8 @@ on:
     - '**.md'
   pull_request:
     branches:
+    - dev
     - main
-    - release
     - v1.0
     paths-ignore:
     - docs/**
