--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,6 +83,6 @@ jobs:
         name: GovUk.Frontend.AspNetCore.nupkg
 
     - name: Publish package to NuGet
-      run: dotnet nuget push **/*.nupkg --api-key ${env:NUGET_TOKEN} --source https://api.nuget.org/v3/index.json --skip-duplicate
+      run: dotnet nuget push **/*.nupkg --api-key $NUGET_TOKEN --source https://api.nuget.org/v3/index.json --skip-duplicate
       env:
           NUGET_TOKEN: ${{ secrets.NUGET_TOKEN }}
