--- a/test/GovUk.Frontend.AspNetCore.ConformanceTests/GovUk.Frontend.AspNetCore.ConformanceTests.csproj
+++ b/test/GovUk.Frontend.AspNetCore.ConformanceTests/GovUk.Frontend.AspNetCore.ConformanceTests.csproj
@@ -5,6 +5,7 @@
 
     <IsPackable>false</IsPackable>
     <NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
