--- a/test/GovUk.FrontEnd.AspNetCore.TestCommon/GovUk.FrontEnd.AspNetCore.TestCommon.csproj
+++ b/test/GovUk.FrontEnd.AspNetCore.TestCommon/GovUk.FrontEnd.AspNetCore.TestCommon.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\GovUk.Frontend.AspNetCore\GovUk.Frontend.AspNetCore.csproj" />
+  </ItemGroup>
+
 </Project>
