--- a/src/GovUk.Frontend.AspNetCore/GovUk.Frontend.AspNetCore.csproj
+++ b/src/GovUk.Frontend.AspNetCore/GovUk.Frontend.AspNetCore.csproj
@@ -35,7 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="$(RepoRoot)\lib\govuk-frontend\dist\**\*">
+    <EmbeddedResource Include="$(RepoRoot)\lib\govuk-frontend\dist\**\*" Exclude="$(RepoRoot)\lib\govuk-frontend\dist\VERSION.txt">
       <Link>Content/%(RecursiveDir)%(Filename)%(Extension)</Link>
       <LogicalName>Content/%(RecursiveDir)%(Filename)%(Extension)</LogicalName>
     </EmbeddedResource>
