Only include selected frontend files in content directory

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -3,12 +3,8 @@
     <AssemblyMetadata Include="GovUkFrontendVersion" Value="$(GovUkFrontendVersion)" />
   </ItemGroup>
 
-  <Target Name="InstallGovUkFrontendPackage" BeforeTargets="Build" Condition="!Exists('$(_NpmLibPackageJson)')">
+  <Target Name="InstallGovUkFrontendPackage" Condition="!Exists('$(_NpmLibPackageJson)')">
     <MakeDir Directories="$(_NpmLibDirectory)" />
     <Exec Command="npm install govuk-frontend@$(GovUkFrontendVersion)" WorkingDirectory="$(_NpmLibDirectory)" />
-  </Target>
-
-  <Target Name="CleanGovUkFrontendPackage" BeforeTargets="Clean">
-    <RemoveDir Directories="$(_NpmLibDirectory)" />
   </Target>
 </Project>
