Add options to control where the static and compiled assets served from
It's fairly common for apps to import the styles (as SASS) and produce
their own CSS bundle with both GDS and app-specific styles in. In this
case it's useful to be able to turn off the default CSS import but keep
serving the static assets.

--- a/src/GovUk.Frontend.AspNetCore/GovUk.Frontend.AspNetCore.csproj
+++ b/src/GovUk.Frontend.AspNetCore/GovUk.Frontend.AspNetCore.csproj
@@ -35,15 +35,20 @@
   </ItemGroup>
 
   <ItemGroup>
-    <_FrontendAssets Include="$(GovUkFrontendLibrary)govuk-frontend.min.css" ContentDirectory="" />
-    <_FrontendAssets Include="$(GovUkFrontendLibrary)govuk-frontend.min.js" ContentDirectory="" />
-    <_FrontendAssets Include="$(GovUkFrontendLibrary)assets\**\*" ContentDirectory="assets/" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="@(_FrontendAssets->'%(Identity)')">
-      <Link>Content/%(ContentDirectory)%(Filename)%(Extension)</Link>
-      <LogicalName>Content/%(ContentDirectory)%(Filename)%(Extension)</LogicalName>
+    <_CompiledAssets Include="$(GovUkFrontendLibrary)govuk-frontend.min.css">
+      <LinkedName>all.min.css</LinkedName>
+    </_CompiledAssets>
+    <_CompiledAssets Include="$(GovUkFrontendLibrary)govuk-frontend.min.js">
+      <LinkedName>all.min.js</LinkedName>
+    </_CompiledAssets>
+    
+    <EmbeddedResource Include="$(GovUkFrontendLibrary)assets\**\*">
+      <Link>Content/Assets/%(RecursiveDir)%(Filename)%(Extension)</Link>
+      <LogicalName>Content/Assets/%(RecursiveDir)%(Filename)%(Extension)</LogicalName>
+    </EmbeddedResource>
+    <EmbeddedResource Include="@(_CompiledAssets)">
+      <Link>Content/Compiled/%(LinkedName)</Link>
+      <LogicalName>Content/Compiled/%(LinkedName)</LogicalName>
     </EmbeddedResource>
   </ItemGroup>
 
