Use the RepoRoot msbuild property for determining where images go

--- a/src/GovUk.Frontend.AspNetCore.DocSamplesScreenshotter/GovUk.Frontend.AspNetCore.DocSamplesScreenshotter.csproj
+++ b/src/GovUk.Frontend.AspNetCore.DocSamplesScreenshotter/GovUk.Frontend.AspNetCore.DocSamplesScreenshotter.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <AssemblyMetadata Include="RepoRoot" Value="$(RepoRoot)" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="PuppeteerSharp" Version="2.0.4" />
   </ItemGroup>
 
